updation in api spec
