# DisprzTraining-main/DisprzTraining/Model/Result/APIResponse.cs
@@ -7,13 +7,13 @@ namespace DisprzTraining.Model
         public static ErrorResponse ConflictResponse = new ErrorResponse()
         {
             language = "en",
-            errorMessage = "Conflict occured between different meetings or input starttime and endtime may be same",
+            errorMessage = "Conflict occured between different meetings",
             errorCode = "AC_001"
         };
         public static ErrorResponse BadRequestResponse = new ErrorResponse()
         {
             language = "en",
-            errorMessage = "Appointment for past time and days are not allowed",
+            errorMessage = "Appointment for past time and days are not allowed or input starttime and endtime may be same",
             errorCode = "AC_002"
         };
         public static ErrorResponse NotFoundResponse = new ErrorResponse()
